fix z-index for ref title stacking

--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -37,7 +37,7 @@ main {
 .dataFloater {
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 3;
 }
 
 .diceTable,
